test_translator/tests/data/checkpoint_2/errors/01_missing_set_entrypoint/solution.py
def other_func():
    return {1, 2, 3}
